--- a/src/views/tariffs/additionalItems/AdditionalItems.module.scss
+++ b/src/views/tariffs/additionalItems/AdditionalItems.module.scss
@@ -84,7 +84,6 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin-bottom: 30px;
   max-width: 350px;
   margin: 0px 5px 20px 25px;
 }
@@ -95,15 +94,17 @@
     align-items: stretch;
     max-width: 1000px;
     width: 49%;
+    justify-content: center;
   }
 }
 
 @media (max-width: 395px) {
   :global(.MuiGrid-root > .MuiGrid-item) {
     align-items: stretch;
-    margin: 0 0px 10px 0px;
     height: 230px;
+    margin: 0;
     max-width: 1000px;
     width: 49%;
+    justify-content: center;
   }
 }
